# n8n-workflow-runner

./: LICENSE  README.md  docker-compose.yaml  makefile  pyproject.toml
app/: __main__.py  config.py  main.py
app/api/: n8n.py
app/core/: db.py  scheduler.py
app/models/: n8n.py
app/services/n8n/: excuter.py  repository.py
app/services/work/: base.py  onnx2trt.py
docker/: Dockerfile
