[tool.poetry]
name = "n8n-workflow-runner"
version = "0.1.0"
description = ""
authors = ["HyeongSeok Kim <tiryul@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
ray = {version = "2.40", extras = ["client"]}
loguru = "^0.7.3"
pydantic-settings = "^2.7.1"
tomli = "^2.2.1"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
psycopg2-binary = "^2.9.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
apscheduler = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
